Completed Capstone - Flatiron School - 04222020

--- a/Capstone - Table of Contents .ipynb
+++ b/Capstone - Table of Contents .ipynb
@@ -85,7 +85,7 @@
     "- __Part II  :__ Jupyter Notebook: __Capstone_Hypothesis Testing.ipynb__\n",
     "- __Part III :__ Jupyter Notebook: __Capstone_ML_Model - (Baseline and FeatEngr).ipynb__\n",
     "- __Part IV  :__ Jupyter Notebook: __Capstone_ML_Model (Final Prediction).ipynb__\n",
-    "- __Part V   :__ Jupyter Notebook: __Capstone_Model_Prediction_Using_Tkinter.ipynb__\n",
+    "- __Part V   :__ Jupyter Notebook: __Capstone_Model_Prediction_Using_Tkinter.ipynb__(Demo)\n",
     "- __Part VI  :__ Jupyter Notebook: __Capstone_Time Series.ipynb__\n",
     "- __Part VII :__ Jupyter Notebook: __Capstone_Plotly_Graphs.ipynb__\n",
     "- __Part VIII:__ Jupyter Notebook: __Capstone_ML_Model(LazyPredict).ipynb__"
@@ -208,7 +208,21 @@
    "metadata": {},
    "source": [
     "## Business Value\n",
-    "> Equipped with more insightful information about __where, when, and why__ these cancellations are happening, a hotel’s revenue manager can make better informed decisions and improve overbooking strategies and cancellation policies."
+    "> Equipped with more insightful information about __where, when, and why__ these cancellations are happening, a hotel’s revenue manager can make better informed decisions and improve overbooking strategies and cancellation policies.\n",
+    "\n",
+    "__Questions to answer from the data:__\n",
+    "\n",
+    "- Where do the guests come from?\n",
+    "- How much do guests pay for a room per night?\n",
+    "- Which are the most busy month?\n",
+    "- Bookings by market segment\n",
+    "- How many bookings were canceled?\n",
+    "- Which month have the highest number of cancelations?\n",
+    "- Which hotel has more cancelations?\n",
+    "- Any difference in lead time?\n",
+    "- Any difference in market segments?\n",
+    "- How about distribution channels?\n",
+    "- How about Month, Day, and Week Number?"
    ]
   },
   {
@@ -245,7 +259,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -308,8 +321,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Model Prediction (GUI)\n",
-    "To simulate a real production environment using of the models Random Forest Classifier, I built a Graphical User Interface (GUI) using Python - Tkinker to capture user input related to hotel booking key features to perform a prediction as either Booked or Canceled along with the prediction Probability. Having an application, such as this, could help to enable hoteliers to decrease the number of cancellations, thus, increasing confidence in demand-management decisions. \n",
+    "## Demonstration - Model Prediction (GUI)\n",
+    "To simulate a real production environment using of the models Random Forest Classifier, I built a Graphical User Interface (GUI) using Python - Tkinker to capture user input related to hotel booking key features to perform a prediction as either Booked or Canceled along with the prediction probability. Having an application, such as this, could help to enable hoteliers to decrease the number of cancellations, thus, increasing confidence in demand-management decisions. \n",
     "![TOC_Image_GUI.png](attachment:TOC_Image_GUI.png)"
    ]
   },
@@ -379,7 +392,7 @@
    "metadata": {},
    "source": [
     "> By exposing cancellation drivers, machine learning models can help hoteliers to better understand booking cancellation patterns and enable the adjustment of a hotel’s cancellation policies and overbooking tactics according to the characteristics of its bookings.\n",
-    "Moreover, this work shows that if hotel managers had access to an application (GUI) then they could act on bookings with high cancellation probability and contain the associated revenue losses.  Leading to other benefits, such as, improve overbooking/cancellation policies, and have more assertive pricing and inventory allocation strategies."
+    "Moreover, this work shows that if hotel managers had access to an application (GUI) then they could act on bookings with high cancellation probability and contain the associated revenue losses.  Leading to other benefits, such as, improve overbooking/cancellation policies, and have more assertive pricing and staffing allocation strategies."
    ]
   },
   {
