--- a/Capstone_Hypothesis Testing.ipynb
+++ b/Capstone_Hypothesis Testing.ipynb
@@ -3513,7 +3513,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Test for Normality\n",
+    "__Test for Normality__\n",
     "\n",
     "(If) Data Is Gaussian (normal distribution): Use Parametric Statistical Methods.\n",
     "\n",
@@ -3889,7 +3889,7 @@
     "- Plotting sample datasets appear to be right-skewed, suggesting data has a non-normal distribution.\n",
     "- Performing several statistical tests for normality, p < 0.05 failing to conform to the normality criterion.\n",
     "- Performing statistical test for variance, p < 0.05 failing to conform to the variance criterion.\n",
-    "- QQ plot distribution does not confirm to the line, suggesting a non-normal distribution."
+    "- QQ plot distribution does not conform to the line, suggesting a non-normal distribution."
    ]
   },
   {
@@ -10350,7 +10350,7 @@
     "height": "calc(100% - 180px)",
     "left": "10px",
     "top": "150px",
-    "width": "165px"
+    "width": "186.656px"
    },
    "toc_section_display": true,
    "toc_window_display": true
