--- a/Capstone_ML_Model (Final Prediction).ipynb
+++ b/Capstone_ML_Model (Final Prediction).ipynb
@@ -4795,6 +4795,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -4853,12 +4854,12 @@
     "- False Negative: 2302.  The model has predicted these customers will not cancel, but in actual they do cancel. \n",
     "    - __Type II Error__\n",
     "\n",
-    "- Accuracy Score:  0.8776766335158249 is the accuracy of the predicton model.\n",
-    "- Precision Score: 0.8693262411347518 is the measure of the accuracy of the model in predicting that a customer will cancel the booking.\n",
-    "- Sensitivity (Recall) Score: 0.8098777667657747 of the cancellations are correctly identified as been canceled.\n",
-    "    - __True Postive Rate__\n",
-    "- Specificity Score:          0.9214327594477907 of the successful bookings are correctly identified as not been canceled.\n",
-    "    - __True Negative Rate__"
+    "- __Accuracy Score:__  0.8776766335158249 is the accuracy of the prediction model.\n",
+    "- __Precision Score:__ 0.8693262411347518 is the measure of the accuracy of the model in predicting that a customer will cancel the booking.\n",
+    "- __Sensitivity (Recall) Score:__ 0.8098777667657747 of the cancellations are correctly identified as been canceled. \n",
+    "    - (True Positive Rate) – Improving hotel managements' ability to predict with __81%__ accuracy - overbooking situations and potential for negative feedback on social channels impacting the hotels' reputation.\n",
+    "- __Specificity Score:__ 0.9214327594477907 of the successful bookings are correctly identified as not been canceled.\n",
+    "    - (True Negative Rate) – Improving hotel managements' ability to predict with __92%__ accuracy - hotel revenue loss and staffing requirements/allocation."
    ]
   },
   {
@@ -5048,29 +5049,30 @@
     "- __Precision Score:__ 0.8693262411347518  \n",
     "- __roc_auc_score:__ 0.8656552631067826 \n",
     "\n",
-    "- __AUC - ROC__ curve is a performance measurement for classification problem at various thresholds settings. ROC is a probability curve and AUC represents degree or measure of separability. It tells how much model is capable of distinguishing between classes. In this case, it can distinguish between the is_canceled class by __86%__.\n",
+    "- __AUC - ROC__ curve is a performance measurement for classification problem at various thresholds settings. ROC is a probability curve and AUC represents degree or measure of separability. It tells how much model is capable of distinguishing between classes. In this case, it can __distinguish between the is_canceled class by 87%__.  ROC_AUC Score: 87% is the ROC is a probability curve and AUC represents degree or measure of separability. ... By analogy, Higher the AUC, better the model is at distinguishing between cancellations being canceled or not canceled. The ROC curve is plotted with TPR against the FPR where TPR is on y-axis and FPR is on the x-axis.\n",
     "\n",
     "\n",
     "- False Positive: 1474.  The model has predicted these customers would cancel, but in actual they do not cancel.\n",
-    "    -  __Type I Error__ , are less than the Type II Errors, however, these errors if not addressed properly, the hotel could experience __Overbooking Situations__ and __Negative Online Social Comments__ both impacting the hotel's reputation.\n",
+    "    -  __Type I Error__ , are less than the Type II Errors, however, these errors if not addressed properly, the hotel could experience __Overbooking Situations__ and __Negative On-line Social Comments__ both impacting the hotel's reputation.\n",
     "\n",
     "\n",
     "- False Negative: 2302.  The model has predicted these customers will not cancel, but in actual they do cancel. \n",
     "    - __Type II Error__, have the most miss-classified errors.  If not addressed properly, the hotel could experience __Revenue Loss__, thinking that the reservation is booked, when in fact these reservations end up canceling.  In this case, the hotel is not prepared to anticipate these cancellations. \n",
     "\n",
     "\n",
-    "- __Accuracy Score:  0.8776766335158249__ is the accuracy of the predicton model.\n",
+    "- __Accuracy Score:  0.8776766335158249__ is the accuracy of the prediction model.\n",
     "\n",
     "\n",
     "- __Precision Score: 0.8693262411347518__ is the measure of the accuracy of the model in predicting that a customer will cancel the booking.\n",
     "\n",
     "\n",
     "- __Sensitivity (Recall) Score: 0.8098777667657747__ of the cancellations are correctly identified as been canceled.\n",
-    "    - __True Postive Rate__, indicates that the model is correctly predicting hotel cancellations __80%__ of the time.\n",
-    "\n",
+    "    - __True Positive Rate__, indicates that the model is correctly predicting hotel cancellations __80%__ of the time.\n",
+    "    - Improving hotel managements' ability to predict with __81%__ accuracy - overbooking situations and potential for negative feedback on social channels impacting the hotels' reputation.\n",
     "\n",
     "- __Specificity Score:          0.9214327594477907__ of the successful bookings are correctly identified as not been canceled.\n",
-    "    - __True Negative Rate__, indicates that the model is correctly predicting hotel successful bookings __92%__ of the time."
+    "    - __True Negative Rate__, indicates that the model is correctly predicting hotel successful bookings __92%__ of the time.\n",
+    "    - Improving hotel managements' ability to predict with __92%__ accuracy - hotel revenue loss and staffing requirements/allocation."
    ]
   },
   {
@@ -5145,6 +5147,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -5156,7 +5159,8 @@
     "\n",
     "- __F Score:__ This is a weighted average of the true positive rate (recall) and precision. \n",
     "\n",
-    "- __ROC Curve:__ This is a commonly used graph that summarizes the performance of a classifier over all possible thresholds. It is generated by plotting the True Positive Rate (y-axis) against the False Positive Rate (x-axis) as you vary the threshold for assigning observations to a given class. "
+    "- __ROC Curve:__ This is a commonly used graph that summarizes the performance of a classifier over all possible thresholds. It is generated by plotting the True Positive Rate (y-axis) against the False Positive Rate (x-axis) as you vary the threshold for assigning observations to a given class.   \n",
+    "    -  In general, an AUC of 0.5 suggests no discrimination (i.e., ability to diagnose patients with and without the disease or condition based on the test), 0.7 to 0.8 is considered acceptable, 0.8 to 0.9 is considered excellent, and more than 0.9 is considered ..."
    ]
   },
   {
@@ -5258,7 +5262,7 @@
     "height": "calc(100% - 180px)",
     "left": "10px",
     "top": "150px",
-    "width": "296.604px"
+    "width": "165px"
    },
    "toc_section_display": true,
    "toc_window_display": true
