--- a/Capstone_Model_Prediction_Using_Tkinter.ipynb
+++ b/Capstone_Model_Prediction_Using_Tkinter.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##  Part V: GUI - Model Predictions | Jupyter Notebook"
+    "##  Part V: GUI (Demo) - Model Predictions | Jupyter Notebook"
    ]
   },
   {
@@ -26,7 +26,7 @@
    "source": [
     "## Goal\n",
     "\n",
-    "> To create a user interface (UI) using Tkinter to capture input parameters for a hotel reservation.\n",
+    "> To create a user interface (UI) using Tkinter __demonstrating__ how to capture input parameters for a hotel reservation.\n",
     "- The input data will be used by the model to provide the user with a prediction as either __Booked__ or __Canceled__ along with the prediction __Probability__.\n"
    ]
   },
@@ -43,8 +43,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-21T18:15:50.882742Z",
-     "start_time": "2020-04-21T18:15:50.875749Z"
+     "end_time": "2020-04-22T15:45:39.590308Z",
+     "start_time": "2020-04-22T15:45:39.583307Z"
     }
    },
    "outputs": [],
@@ -65,8 +65,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-21T18:15:53.414755Z",
-     "start_time": "2020-04-21T18:15:50.888741Z"
+     "end_time": "2020-04-22T15:45:42.420349Z",
+     "start_time": "2020-04-22T15:45:39.594317Z"
     }
    },
    "outputs": [],
@@ -116,8 +116,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-21T18:15:53.426751Z",
-     "start_time": "2020-04-21T18:15:53.419747Z"
+     "end_time": "2020-04-22T15:45:42.429311Z",
+     "start_time": "2020-04-22T15:45:42.424312Z"
     }
    },
    "outputs": [],
@@ -143,8 +143,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-21T18:15:53.441742Z",
-     "start_time": "2020-04-21T18:15:53.433745Z"
+     "end_time": "2020-04-22T15:45:42.444314Z",
+     "start_time": "2020-04-22T15:45:42.435305Z"
     }
    },
    "outputs": [],
@@ -171,8 +171,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-21T18:15:53.494742Z",
-     "start_time": "2020-04-21T18:15:53.452751Z"
+     "end_time": "2020-04-22T15:45:42.481305Z",
+     "start_time": "2020-04-22T15:45:42.454306Z"
     }
    },
    "outputs": [],
@@ -292,8 +292,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-21T18:15:56.702478Z",
-     "start_time": "2020-04-21T18:15:53.504744Z"
+     "end_time": "2020-04-22T15:45:43.902301Z",
+     "start_time": "2020-04-22T15:45:42.486310Z"
     }
    },
    "outputs": [],
@@ -310,8 +310,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-21T18:15:57.348479Z",
-     "start_time": "2020-04-21T18:15:56.706480Z"
+     "end_time": "2020-04-22T15:45:44.554721Z",
+     "start_time": "2020-04-22T15:45:43.907307Z"
     }
    },
    "outputs": [
@@ -398,8 +398,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-21T18:15:57.366481Z",
-     "start_time": "2020-04-21T18:15:57.353483Z"
+     "end_time": "2020-04-22T15:45:44.588680Z",
+     "start_time": "2020-04-22T15:45:44.570683Z"
     }
    },
    "outputs": [],
@@ -435,8 +435,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-21T18:15:57.383483Z",
-     "start_time": "2020-04-21T18:15:57.371480Z"
+     "end_time": "2020-04-22T15:45:44.609685Z",
+     "start_time": "2020-04-22T15:45:44.595677Z"
     }
    },
    "outputs": [
@@ -462,8 +462,8 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-21T18:15:58.013480Z",
-     "start_time": "2020-04-21T18:15:57.388478Z"
+     "end_time": "2020-04-22T15:45:45.246700Z",
+     "start_time": "2020-04-22T15:45:44.614680Z"
     }
    },
    "outputs": [
@@ -500,8 +500,8 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-21T18:15:58.027484Z",
-     "start_time": "2020-04-21T18:15:58.018483Z"
+     "end_time": "2020-04-22T15:45:45.277680Z",
+     "start_time": "2020-04-22T15:45:45.259687Z"
     }
    },
    "outputs": [
@@ -528,8 +528,8 @@
    "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-21T18:15:58.045485Z",
-     "start_time": "2020-04-21T18:15:58.033482Z"
+     "end_time": "2020-04-22T15:45:45.296677Z",
+     "start_time": "2020-04-22T15:45:45.286678Z"
     }
    },
    "outputs": [
@@ -559,8 +559,8 @@
    "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-21T18:15:58.685481Z",
-     "start_time": "2020-04-21T18:15:58.050478Z"
+     "end_time": "2020-04-22T15:45:45.929675Z",
+     "start_time": "2020-04-22T15:45:45.303675Z"
     }
    },
    "outputs": [
@@ -597,8 +597,8 @@
    "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-21T18:15:58.699478Z",
-     "start_time": "2020-04-21T18:15:58.689484Z"
+     "end_time": "2020-04-22T15:45:45.943679Z",
+     "start_time": "2020-04-22T15:45:45.933677Z"
     }
    },
    "outputs": [
@@ -642,8 +642,8 @@
    "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-21T18:19:10.736238Z",
-     "start_time": "2020-04-21T18:15:58.704482Z"
+     "end_time": "2020-04-22T18:03:15.572611Z",
+     "start_time": "2020-04-22T15:45:45.949678Z"
     }
    },
    "outputs": [
@@ -682,6 +682,39 @@
      "output_type": "stream",
      "text": [
       "Model Prediction: Booked | Probabilty Stats : [[0.70502021 0.29497979]]\n",
+      "\n",
+      "_______________________________________________________\n",
+      "Lead Time:  6\n",
+      "Country: PRT\n",
+      "Customer Type:  Transient\n",
+      "Market Segment: Online TA\n",
+      "adr: 85.0\n",
+      "[365, 0, 1, 85.0, 0, 26, 28.0, 15, 2, 0, 1, 2020, 0, 1, 1]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([1], dtype=int64)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.29699391, 0.70300609]])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model Prediction: Canceled | Probabilty Stats : [[0.29699391 0.70300609]]\n",
       "\n",
       "_______________________________________________________\n"
      ]
@@ -904,8 +937,8 @@
    "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-21T18:19:10.768232Z",
-     "start_time": "2020-04-21T18:19:10.743235Z"
+     "end_time": "2020-04-22T18:03:15.626612Z",
+     "start_time": "2020-04-22T18:03:15.591617Z"
     }
    },
    "outputs": [
@@ -913,7 +946,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Capstone_Model_Prediction_Using_Tkinter Total Execution Time: 0:03:19.875489\n"
+      "Capstone_Model_Prediction_Using_Tkinter Total Execution Time: 2:17:36.022307\n"
      ]
     }
    ],
