--- a/Capstone_ML_Model(LazyPredict).ipynb
+++ b/Capstone_ML_Model(LazyPredict).ipynb
@@ -2262,7 +2262,7 @@
     "width": "265.667px"
    },
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   },
   "varInspector": {
    "cols": {
