--- a/Capstone - Table of Contents .ipynb
+++ b/Capstone - Table of Contents .ipynb
@@ -16,9 +16,7 @@
     "* __Student name:__ Sharonda Pettiett-Warner\n",
     "* __Student pace:__ part time - PT_0610\n",
     "* __Scheduled project review date/time:__ April 24, 2020\n",
-    "* __Instructor name:__ Eli Thomas\n",
-    "* __Blog post URL:__ \"How to Pickle your Trained Model\"\n",
-    "    - https://medium.com/@spettiett/how-to-pickle-your-trained-model-f4b7051babaa?source=friends_link&sk=dccb5c965557f0964b1e554ebfb183e6"
+    "* __Instructor name:__ Eli Thomas"
    ]
   },
   {
@@ -140,7 +138,21 @@
    ]
   },
   {
-   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Video | The Horrors of Overbooking\n",
+    "> __Source: comedycentral.com__"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<video autoplay loop controls src=\"./giphy.mp4\" />"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -231,7 +243,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -271,7 +282,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -302,7 +312,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -332,7 +341,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
