Completed Capstone Project

--- a/Capstone - Table of Contents .ipynb
+++ b/Capstone - Table of Contents .ipynb
@@ -16,7 +16,9 @@
     "* __Student name:__ Sharonda Pettiett-Warner\n",
     "* __Student pace:__ part time - PT_0610\n",
     "* __Scheduled project review date/time:__ April 24, 2020\n",
-    "* __Instructor name:__ Eli Thomas"
+    "* __Instructor name:__ Eli Thomas\n",
+    "* __Blog:__ \"Hotel Booking Demand | Insights\" - \n",
+    "__URL:__https://medium.com/@spettiett/hotel-booking-demand-insights-ba4e67eb287d"
    ]
   },
   {
